fixing pop up window: z-index and close btn

--- a/styles2.css
+++ b/styles2.css
@@ -66,7 +66,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1000; /* Ensure it's above other content */
+  z-index: 1050; /* Ensure it's above other content */
 }
 
 /* Popup content styling */
@@ -104,7 +104,7 @@
 
 .popup-close-btn {
   position: absolute;
-  top: 10px;
+  top: 0;
   right: 10px;
   font-size: 1.5em;
   cursor: pointer;
